# dist-si

cpp-investigations/: Makefile  vectorize.cpp
paper/tex/abstract/: abstract.tex
paper/tex/cec-19/: Makefile  soa_pso.tex
paper/tex/code/: efficient_par.cpp  efficient_update.cpp  naive_par.cpp  naive_update.cpp  particle.cpp  particles.cpp
paper/tex/gecco-19/: bibliography.bib  efficient-pso.tex  efficientbody.tex
paper/tex/img/: Makefile  N.plt  ackley.dps  ackley.eps  ackley.plt  all3steps.plt  all3time.plt  baseline.plt  dim.plt  par_res_rastrigin.plt  rastrigin.dps  rastrigin.eps  rastrigin.plt  speedup_seq.plt
paper/tex/img/output/: N.eps  ackley.eps  ackley.tex  all3steps.eps  all3time.eps  dim.eps  rastrigin.eps  rastrigin.tex  speedup_seq.eps
paper/tex/manuscript/: parallel_pso.tex
pso/: Cargo.toml
pso-cpp/: CMakeLists.txt  README.md
pso-cpp/src/: experiment.h  experiment_runner.cpp  particle.h  particle_update_mode.h  particles.h  particles_functional.h  util.h
pso/src/: lib.rs  main.rs  particle.rs
pso/src/particle/: mod.rs
pso/src/pso/: mod.rs  particle.rs  position.rs  simulation.rs  velocity.rs
